# closure_attr

./: Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md
closure_attr_core/: Cargo.toml  README.md
closure_attr_core/src/: lib.rs
closure_attr_core/tests/: expand.rs
closure_attr_derive/: Cargo.toml  README.md
closure_attr_derive/src/: lib.rs
src/: lib.rs
tests/: tests.rs
