[package]
name = "closure_attr"
version = "0.2.0"
edition = "2021"
description = "An attribute macro to simplify closure captures"
repository = "https://github.com/tbfleming/closure_attr"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["closure_attr_core", "closure_attr_derive"]

[dependencies]
closure_attr_derive = { version = "0.2.0", path = "closure_attr_derive" }
