[package]
name = "closure_attr_core"
version = "0.3.0"
edition = "2021"
description = "Internal library for the closure_attr crate"
repository = "https://github.com/tbfleming/closure_attr"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1.0.33"
syn = { version = "2.0.31", features = ["full", "visit-mut"] }
