[package]
name = "closure_attr_derive"
version = "0.3.0"
edition = "2021"
description = "Internal library for the closure_attr crate"
repository = "https://github.com/tbfleming/closure_attr"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
closure_attr_core = { version = "0.3.0", path = "../closure_attr_core" }
